# hwm14

./: .mypy.ini  CMakeLists.txt  LICENSE.txt  README-hwm14.txt  README.md  RunHWM14.py  hwm14.m  meson.build  setup.cfg  setup.py
hwm14/: __init__.py  plots.py
src/: hwm14.f90
tests/: test_all.py  test_script.py
